# mc

.devcontainer/: devcontainer.json  post-create.sh
file-types/: collect-file-output.pl  list-type-sections.pl
maint/ext-file-types/: README.md  collect-file-output-samples.sh  collect-file-output.pl  generate-file-samples.mk  list-type-sections.pl  test-type-sections.pl
misc/: mc.ext.ini.in
src/filemanager/: ext.c
tests/: .gitignore
tests/src/: Makefile.am
tests/src/filemanager/: Makefile.am  ext__regex_check_type.c
tests/src/fixtures/filemanager/file-types/: file
tests/src/fixtures/filemanager/file-types/file_output/: alpine-3.23.4.tsv  alpine-edge.tsv  archlinux-latest.tsv  debian-11.tsv  debian-12.tsv  fedora-43.tsv  fedora-45.tsv  freebsd-15.1-beta1.tsv  gentoo-stage3-latest.tsv  opensuse-leap-15.tsv  ubuntu-20.04.tsv  ubuntu-22.04.tsv  ubuntu-24.04.tsv  ubuntu-26.04.tsv
tests/src/fixtures/filemanager/file-types/sample_files/: 3gp  Mach-O  Typescript  apk  bzip  bzip2  compress  elf  framemaker  gif  gzip  info-by-type  ipk-deb  ipk-openwrt  jar-war-by-type  jpeg  lz  lzma  mailbox  man  mng  mso-doc-1  mso-doc-2  msxls-by-type  netpbm  pak  par2  pdf  png  postscript  rbm  sqlite3.db  squashfs  troff.bzip2  webm-by-type  xz  zip-by-type  zstd
